# counter-strike-cpp

./: .gitignore  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  setup_vcpkg.bat  vcpkg.json
assets/gfx/env/: realsky4bk.tga  realsky4ft.tga  realsky4lf.tga  realsky4rt.tga
assets/shaders/: basic.frag  basic.vert
assets/weapons/ak-47/: license.txt  scene.gltf
docs/: ARCHITECTURE.md  ASSETS.md  MOVEMENT.md  NETWORKING.md  RENDERER.md
src/: client_main.cpp  server_main.cpp
src/assets/: assets.hpp  assets_stub.cpp
src/assets/bsp/: bsp_format.hpp  simple_bsp_loader.cpp  simple_bsp_loader.hpp
src/assets/gltf/: simple_gltf_loader.cpp  simple_gltf_loader.hpp
src/audio/: audio_stub.cpp
src/ecs/: ecs.hpp
src/ecs/components/: network.hpp  physics.hpp  player.hpp  render.hpp  transform.hpp
src/ecs/systems/: system.hpp
src/ecs/world/: world.cpp  world.hpp
src/gameplay/: gameplay_stub.cpp
src/gameplay/weapons/: weapon.hpp
src/movement/pm_shared/: pm_defs.hpp  pm_shared.cpp  pm_shared.hpp
src/network/: network_stub.cpp
src/network/protocol/: messages.hpp
src/network/server/: server.hpp
src/renderer/: renderer.hpp  renderer_stub.cpp  simple_renderer.cpp  simple_renderer.hpp
src/renderer/backend/: gl_mesh.cpp  gl_mesh.hpp  gl_shader.cpp  gl_shader.hpp
src/ui/: ui_stub.cpp
